--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dev_dependencies:
 
 flutter:
   assets:
+    - assets/images/ninja.png
     - assets/images/layers/layer_01.png
     - assets/images/layers/layer_02.png
     - assets/images/layers/layer_03.png
