--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,36 @@ flutter:
     - assets/images/ninja/run-007.png
     - assets/images/ninja/run-008.png
     - assets/images/ninja/run-009.png
+    - assets/images/ninja/idle-000.png
+    - assets/images/ninja/idle-001.png
+    - assets/images/ninja/idle-002.png
+    - assets/images/ninja/idle-003.png
+    - assets/images/ninja/idle-004.png
+    - assets/images/ninja/idle-005.png
+    - assets/images/ninja/idle-006.png
+    - assets/images/ninja/idle-007.png
+    - assets/images/ninja/idle-008.png
+    - assets/images/ninja/idle-009.png
+    - assets/images/ninja/glide-000.png
+    - assets/images/ninja/glide-001.png
+    - assets/images/ninja/glide-002.png
+    - assets/images/ninja/glide-003.png
+    - assets/images/ninja/glide-004.png
+    - assets/images/ninja/glide-005.png
+    - assets/images/ninja/glide-006.png
+    - assets/images/ninja/glide-007.png
+    - assets/images/ninja/glide-008.png
+    - assets/images/ninja/glide-009.png    
+    - assets/images/ninja/jump-000.png
+    - assets/images/ninja/jump-001.png
+    - assets/images/ninja/jump-002.png
+    - assets/images/ninja/jump-003.png
+    - assets/images/ninja/jump-004.png
+    - assets/images/ninja/jump-005.png
+    - assets/images/ninja/jump-006.png
+    - assets/images/ninja/jump-007.png
+    - assets/images/ninja/jump-008.png
+    - assets/images/ninja/jump-009.png
     - assets/images/layers/layer_07_cropped.png
     - assets/images/layers/layer_07_cropped_mark.png
     - assets/images/layers/layer_01.png
