--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,17 @@
 name: haunt
 description: Haunt Flame Game
 
+version: 1.0.0+1
+
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
 dependencies:
   screen:
   flutter:
     sdk: flutter
 
-  flame:
-      path: ../flame
+  flame: 0.9.4
 
 dev_dependencies:
   flutter_test:
